<resources>
    <string name="app_name">ViewModel LiveData Sample</string>

    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete All</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>

    <string name="go_to_compose">Go to Compose</string>
    <string name="go_to_main">Go to Main</string>
    <string name="go_to_other">Go to Other</string>
</resources>